# Ray-Tracer

./: CMakeLists.txt  Camera.h  PPM_File.h  Plane.h  README.txt  RGB_Color.h  Ray.h  Scene.h  SceneObject.h  Sphere.h  Vec3.h  Vect3.h  csc305-a1.ppm  main.cpp
